[gd_scene load_steps=3 format=2]

[ext_resource path="res://oregonTrail.gd" type="Script" id=1]
[ext_resource path="res://option1.gd" type="Script" id=2]

[node name="oregonTrail" type="Node2D"]
script = ExtResource( 1 )

[node name="option1" type="RichTextLabel" parent="."]
margin_left = 167.247
margin_top = 40.9699
margin_right = 504.247
margin_bottom = 238.97
bbcode_enabled = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 104.0
margin_top = 176.0
margin_right = 116.0
margin_bottom = 196.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 568.0
margin_top = 176.0
margin_right = 580.0
margin_bottom = 196.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="option1" method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="option1" method="_on_Button2_pressed"]
